# retdec-idaplugin

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  LICENSE-THIRD-PARTY  README.md
doc/: CMakeLists.txt
doc/user_guide/: .gitignore  CMakeLists.txt  Makefile  user_guide.tex
doc/user_guide/figures/: avast-logo-cmyk.eps
scripts/: CMakeLists.txt  download-and-build-libs.sh  run-ida-decompilation.py  run-ida-decompilation.sh
scripts/idc/: retdec-decompile-full.idc  retdec-decompile-selective.idc
src/: CMakeLists.txt
src/idaplugin/: CMakeLists.txt  README.md  code_viewer.cpp  code_viewer.h  config.cpp  config.h  config_generator.cpp  config_generator.h  context.cpp  context.h  decompiler-config.json  decompiler.cpp  decompiler.h  defs.cpp  defs.h  doxygen.h  function.cpp  function.h  hexplace.cpp  hexview.cpp  idaplugin.cpp  idaplugin.h  place.cpp  place.h  plugin_config.cpp  plugin_config.h  retdec.cpp  retdec.h  test-fuck.cpp  test.cpp  token.cpp  token.h  ui.cpp  ui.h  utils.cpp  utils.h  yx.cpp  yx.h
